@@ -12,7 +12,7 @@ Curtana,vass_curtana,Carrier,Vass Shipyards,vass_chrono_jump,23,7000,800,11500,,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 #fighters,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 Estoc,vass_estoc,,Vass Shipyards,vass_temporal_recall,,320,30,600,,30,0,,330,160,120,65,180,10,FRONT,,210,0,1,,,2,2,,,,,,,,,,,,,,,,0,,,
-Katzbalger,vass_katzbalger,,Vass Shipyards,vass_chrono_illusion,,420,60,800,,80,0,,250,380,350,86,240,18,OMNI,,120,0,1,,,3,3,,,,,,,,,,,,,,,,0,,,
+Katzbalger,vass_katzbalger,,Vass Shipyards,vass_chrono_illusion,,420,80,800,,80,0,,250,380,350,86,240,18,OMNI,,120,0,1,,,3,3,,,,,,,,,,,,,,,,0,,,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 #family_uniques,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 Tuck,vass_estoc_torpor,,Torpor Tech,vass_temporal_recall,,320,30,800,,30,0,,330,160,120,65,180,10,FRONT,,210,0,1,,,2,2,,,,,,,,,,,,,,,,0,,,
