@@ -29,7 +29,7 @@ Katzbalger Lights,vass_deco_katzbalger_lights,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,SYSTE
 #scripted,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 Curtana Forward Launch Bay,vass_curtanabay_forward,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,SYSTEM,,,,,,,,,,,,,,,
 Curtana Back Landing Bay,vass_curtanabay_back,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,SYSTEM,,,,,,,,,,,,,,,
-Illusion Projector,vass_illusion_flarelauncher,,,,600,,5,1,,,,,,,ENERGY,0,0,0,0.1,2,0.2,120,120,0,0,,150,300,8,300,SYSTEM,,,,,,,,,,,,,,,
+Illusion Projector,vass_illusion_flarelauncher,,,,600,,5,1,,,,,,,ENERGY,0,0,0,0.1,2,0.2,120,120,0,0,,150,300,8,450,SYSTEM,,,,,,,,,,,,,,,
 Dyrnwyn Blaster (Illusion),vass_dyrnwyn_fake,5,0.1,800,500,,0,,0,50,6,,,,ENERGY,1,,0,0.4,,,1,3,0.3,5,,1000,,,,SYSTEM,,,,,,,,,,,,,,
 Asi Fakeweapon 1,vass_asi_fake1,5,0.1,750,650,,110,,20,25,8,,,,HIGH_EXPLOSIVE,150,,0.3,0.9,1,,,,,,,85,,,120,SYSTEM,,,,,,,,,,,,,,,
 Asi Fakeweapon 2,vass_asi_fake2,5,0.1,700,650,,220,,20,25,8,,,,HIGH_EXPLOSIVE,300,,0.3,0.9,1,,,,,,,3750,,,40,SYSTEM,,,,,,,,,,,,,,,
