@@ -4,11 +4,7 @@ import com.fs.starfarer.api.Global;
 import com.fs.starfarer.api.campaign.*;
 import com.fs.starfarer.api.campaign.econ.Industry;
 import com.fs.starfarer.api.campaign.econ.MarketAPI;
-import com.fs.starfarer.api.characters.PersonAPI;
-import com.fs.starfarer.api.impl.campaign.ids.*;
 import com.fs.starfarer.api.impl.campaign.intel.bar.events.BarEventManager;
-import com.fs.starfarer.api.impl.campaign.intel.bar.events.BaseBarEventWithPerson;
-import com.fs.starfarer.api.characters.FullName.Gender;
 
 import com.fs.starfarer.api.util.Misc;
 import com.fs.starfarer.api.util.WeightedRandomPicker;
@@ -49,7 +45,7 @@ public class VassPerturbaWeaponContractEvent extends VassPerturbaBaseEvent {
         CONTINUE_KNOWS_PERTURBA,
         CONTINUE_DOES_NOT_KNOW_PERTURBA,
         CONTINUE_2,
-        CONTINUE_3,
+        CONTINUE_BUY_SERVICE,
         LEAVE_NONHOSTILE,
         LEAVE_HOSTILE,
         LEAVE,
@@ -204,15 +200,15 @@ public class VassPerturbaWeaponContractEvent extends VassPerturbaBaseEvent {
             case CONTINUE_2:
                 text.addPara("Simply put, we would like to extend our services to you. You pay us an up-front cost of, say... " + PURCHASE_COST + " credits, and after that you and your fleets can acquire as much ordinance as you want from us.", h, ""+PURCHASE_COST);
                 text.addPara("All we ask in return is fair payment for the weapons we deliver, and that you supply a fraction of the more common materials we'll need for their construction; surely, a cheap price to pay for someone capable of owning a colony, no?");
-                options.addOption("Agree to pay for their services", OptionId.CONTINUE_3);
+                options.addOption("Agree to pay for their services", OptionId.CONTINUE_BUY_SERVICE);
                 if (Global.getSector().getPlayerFleet().getCargo().getCredits().get() < PURCHASE_COST) {
-                    options.setEnabled(OptionId.CONTINUE_3, false);
-                    options.setTooltip(OptionId.CONTINUE_3, "You don't have enough credits.");
+                    options.setEnabled(OptionId.CONTINUE_BUY_SERVICE, false);
+                    options.setTooltip(OptionId.CONTINUE_BUY_SERVICE, "You don't have enough credits.");
                 }
                 options.addOption("Inform the agent you're not interested in their services at this moment.", OptionId.LEAVE_NONHOSTILE);
                 options.addOption("You've heard enough from this criminal. Call the guards!", OptionId.LEAVE_HOSTILE);
                 break;
-            case CONTINUE_3:
+            case CONTINUE_BUY_SERVICE:
                 text.addPara("'Pleasure doing business with you. Here:' The man hands you a tiny tri-chip. 'This should provide you with a one-way encrypted comms channel to our sales department and a program for easily managing your orders. It should pop up under your normal administrative functions; just make an order and the program should requisition credits and other resources as necessary to our collection location. Then, we'll bring the wares to the agreed-upon drop point once they goods are ready.'", h, "normal administrative functions");
 
                 text.setFontSmallInsignia();
@@ -280,14 +276,14 @@ public class VassPerturbaWeaponContractEvent extends VassPerturbaBaseEvent {
             case CONTINUE_1:
                 text.addPara("Ah, yes, of course. I'll go through deal again for completeness sake: you pay us an up-front cost of about " + PURCHASE_COST + " credits, and after that you and your fleets can acquire as much ordinance as you want from us.", h, ""+PURCHASE_COST);
                 text.addPara("In return, we get fair payment for the weapons we deliver, and you supply a fraction of the more common materials we'll need for their construction.");
-                options.addOption("Agree to pay for their services", OptionId.CONTINUE_2);
+                options.addOption("Agree to pay for their services", OptionId.CONTINUE_BUY_SERVICE);
                 if (Global.getSector().getPlayerFleet().getCargo().getCredits().get() < PURCHASE_COST) {
-                    options.setEnabled(OptionId.CONTINUE_2, false);
-                    options.setTooltip(OptionId.CONTINUE_2, "You don't have enough credits.");
+                    options.setEnabled(OptionId.CONTINUE_BUY_SERVICE, false);
+                    options.setTooltip(OptionId.CONTINUE_BUY_SERVICE, "You don't have enough credits.");
                 }
                 options.addOption("Inform the agent you're not interested in their services at this moment.", OptionId.LEAVE_NONHOSTILE);
                 break;
-            case CONTINUE_2:
+            case CONTINUE_BUY_SERVICE:
                 text.addPara("'Pleasure doing business with you. Here:'");
                 text.addPara("The man hands you a tiny tri-chip.");
                 text.addPara("'This should provide you with a one-way encrypted comms channel to our sales department and a program for easily managing your orders. It should pop up under your normal administrative functions; just make an order and the program should requisition credits and other resources as necessary to our collection location. Then, we'll bring the wares to the agreed-upon drop point once they are ready.'", h, "normal administrative functions");
@@ -369,7 +365,6 @@ public class VassPerturbaWeaponContractEvent extends VassPerturbaBaseEvent {
             post.add("Confront the suspicious individual.");
             post.add("Sit down with the suspicious individual and see what they want with you.");
         }
-        post.add("Try to grab the spacers attention and make your way over to them.");
         return post.pick();
     }
 }
